--- a/app/src/main/res/layout/activity_available_rooms.xml
+++ b/app/src/main/res/layout/activity_available_rooms.xml
@@ -32,38 +32,38 @@
 
         </LinearLayout>
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/btnBookNow"
-            android:layout_width="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_height="@dimen/_50sdp"
-            android:layout_margin="@dimen/_10sdp"
-            android:backgroundTint="@color/blue"
-            app:cardCornerRadius="@dimen/_20sdp">
+<!--        <androidx.cardview.widget.CardView-->
+<!--            android:id="@+id/btnBookNow"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            android:layout_height="@dimen/_50sdp"-->
+<!--            android:layout_margin="@dimen/_10sdp"-->
+<!--            android:backgroundTint="@color/blue"-->
+<!--            app:cardCornerRadius="@dimen/_20sdp">-->
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingHorizontal="@dimen/_15sdp"
-                android:paddingVertical="@dimen/_5sdp">
+<!--            <LinearLayout-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:paddingHorizontal="@dimen/_15sdp"-->
+<!--                android:paddingVertical="@dimen/_5sdp">-->
 
-                <ImageView
-                    android:layout_width="@dimen/_30sdp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/img_meeting_room" />
+<!--                <ImageView-->
+<!--                    android:layout_width="@dimen/_30sdp"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:src="@drawable/img_meeting_room" />-->
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:layout_marginStart="@dimen/_5sdp"
-                    android:text="Book Now"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/_20ssp" />
-            </LinearLayout>
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:gravity="center"-->
+<!--                    android:layout_marginStart="@dimen/_5sdp"-->
+<!--                    android:text="Book Now"-->
+<!--                    android:textColor="@color/white"-->
+<!--                    android:textSize="@dimen/_20ssp" />-->
+<!--            </LinearLayout>-->
 
-        </androidx.cardview.widget.CardView>
+<!--        </androidx.cardview.widget.CardView>-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
