--- a/app/src/main/res/layout/all_rooms_item.xml
+++ b/app/src/main/res/layout/all_rooms_item.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        app:cardUseCompatPadding="true"
-        app:cardCornerRadius="@dimen/_10sdp"
-        android:layout_margin="@dimen/_5sdp"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_5sdp"
         android:backgroundTint="@color/blue"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_height="wrap_content">
+        app:cardCornerRadius="@dimen/_10sdp"
+        app:cardUseCompatPadding="true"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -20,9 +20,9 @@
             android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
-                app:cardCornerRadius="@dimen/_10sdp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="@dimen/_10sdp">
 
                 <ImageView
                     android:id="@+id/imgRoom"
@@ -35,27 +35,28 @@
 
             <TextView
                 android:id="@+id/txtName"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/_30ssp"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:ellipsize="marquee"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
+                android:gravity="center"
                 android:marqueeRepeatLimit="marquee_forever"
                 android:singleLine="true"
+                android:text="Hotel Taj"
                 android:textColor="@color/white"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:text="Hotel Taj"/>
+                android:textSize="@dimen/_30ssp" />
 
             <TextView
                 android:id="@+id/txtLocation"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_15ssp"
+                android:gravity="center"
                 android:paddingStart="@dimen/_5sdp"
-                android:text="Ahmedabad"/>
-
+                android:text="Ahmedabad"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_15ssp" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
