--- a/app/src/main/res/layout/activity_faqactivity.xml
+++ b/app/src/main/res/layout/activity_faqactivity.xml
@@ -32,8 +32,8 @@
     <ScrollView
         android:id="@+id/svLyt"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/_70sdp"
         android:layout_marginBottom="@dimen/_10sdp"
         android:paddingVertical="@dimen/_10sdp"
         app:layout_constraintEnd_toEndOf="parent"
